[gd_scene load_steps=8 format=3 uid="uid://du5lfj2lpryh8"]

[ext_resource type="Script" uid="uid://ve25t5t7lumb" path="res://ui/huds/level_hud/level_hud.gd" id="1_o1pp8"]
[ext_resource type="Theme" uid="uid://d3kms72g8lsqf" path="res://ui/themes/base_ui_theme.tres" id="2_345ha"]
[ext_resource type="AudioStream" uid="uid://dowbsr08jbn7v" path="res://sounds_effects/kenney_interface-sounds/Audio/back_004.ogg" id="2_yi3xl"]
[ext_resource type="AudioStream" uid="uid://c2raukbcv88q1" path="res://sounds_effects/kenney_interface-sounds/Audio/back_003.ogg" id="3_ag4bk"]

[sub_resource type="FontFile" id="FontFile_345ha"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/50/0/ascent = 0.0
cache/0/50/0/descent = 0.0
cache/0/50/0/underline_position = 0.0
cache/0/50/0/underline_thickness = 0.0
cache/0/50/0/scale = 1.0
cache/0/10/0/ascent = 0.0
cache/0/10/0/descent = 0.0
cache/0/10/0/underline_position = 0.0
cache/0/10/0/underline_thickness = 0.0
cache/0/10/0/scale = 1.0
cache/0/30/0/ascent = 0.0
cache/0/30/0/descent = 0.0
cache/0/30/0/underline_position = 0.0
cache/0/30/0/underline_thickness = 0.0
cache/0/30/0/scale = 1.0

[sub_resource type="Environment" id="Environment_sdvmq"]

[sub_resource type="World3D" id="World3D_sdvmq"]
environment = SubResource("Environment_sdvmq")

[node name="LevelHud" type="CanvasLayer"]
script = ExtResource("1_o1pp8")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_345ha")
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TopRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer/TopRow"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="Control5" type="Control" parent="MarginContainer/VBoxContainer/TopRow"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/TopRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TimerLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/TopRow/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/normal_font = SubResource("FontFile_345ha")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "aaa"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/TopRow"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="Control4" type="Control" parent="MarginContainer/VBoxContainer/TopRow"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/TopRow/Control4"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -96.0
offset_bottom = 70.0
grow_horizontal = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/TopRow/Control4/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 7
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TopRow/Control4/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="CollectibleLabel" type="Label" parent="MarginContainer/VBoxContainer/TopRow/Control4/PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "x0"

[node name="SubViewportContainer" type="SubViewportContainer" parent="MarginContainer/VBoxContainer/TopRow/Control4/PanelContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="MarginContainer/VBoxContainer/TopRow/Control4/PanelContainer/MarginContainer/HBoxContainer/SubViewportContainer"]
unique_name_in_owner = true
world_3d = SubResource("World3D_sdvmq")
transparent_bg = true
handle_input_locally = false
msaa_3d = 3
screen_space_aa = 1
use_debanding = true
gui_disable_input = true
size = Vector2i(64, 64)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="MarginContainer/VBoxContainer/TopRow/Control4/PanelContainer/MarginContainer/HBoxContainer/SubViewportContainer/SubViewport"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, -1)
projection = 1
size = 0.8

[node name="ModelHolder" type="Node3D" parent="MarginContainer/VBoxContainer/TopRow/Control4/PanelContainer/MarginContainer/HBoxContainer/SubViewportContainer/SubViewport"]
unique_name_in_owner = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="MarginContainer/VBoxContainer/TopRow/Control4/PanelContainer/MarginContainer/HBoxContainer/SubViewportContainer/SubViewport"]
environment = SubResource("Environment_sdvmq")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="MarginContainer/VBoxContainer/TopRow/Control4/PanelContainer/MarginContainer/HBoxContainer/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, -0.866025, 0.5, 0, -0.5, -0.866025, 0, 1.29056, -2.41749)

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1

[node name="SpeedrunStartLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/Spacer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpeedrunStartPlayer" type="AudioStreamPlayer" parent="MarginContainer/VBoxContainer/Spacer/SpeedrunStartLabel"]
unique_name_in_owner = true
stream = ExtResource("2_yi3xl")
bus = &"Sound Effect"

[node name="SpeedrunReadyPlayer" type="AudioStreamPlayer" parent="MarginContainer/VBoxContainer/Spacer/SpeedrunStartLabel"]
unique_name_in_owner = true
stream = ExtResource("3_ag4bk")
bus = &"Sound Effect"

[node name="BottomRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
